--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,33 @@
-Source: template-repository
-Section: unknown
+Source: qoi
+Section: libs
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Alex Myczko <tar@debian.org>
+Rules-Requires-Root: no
+Build-Depends:
+ debhelper-compat (= 13),
+ libstb-dev,
+ libpng-dev
+Standards-Version: 4.7.0
+Homepage: https://github.com/phoboslab/qoi
+Vcs-Browser: https://salsa.debian.org/debian/qoi
+Vcs-Git: https://salsa.debian.org/debian/qoi.git
 
-Package: template-repository
+Package: qoi
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+Description: “Quite OK Image Format” for fast, lossless image compression
+ This is the original QOI implementation to work with images with C or C++.
+
+Package: libqoi-dev
+Section: libdevel
+Architecture: all
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ libstb-dev
+Description: “Quite OK Image Format” for fast, lossless image compression (devel)
+ This is the original QOI implementation to work with images with C or C++.
+ .
+ This package contains the single header file.
